# MesonGoogleTest

./: .gitignore  README.md  common_meson.md  meson.build
source/: caculate.cpp  main.cpp  meson.build
tests/: meson.build  my_test.cpp
