# Source files
sources = [
  'main.cpp',
  'caculate.cpp'
]

# Add the executable
executable('my_app', sources,
    include_directories : inc_dir,
    install : true, install_dir : bin_dir)

# Link any libraries if needed
# executable('my_app', sources,
#   include_directories : inc_dir,
#   dependencies : [dependency('some_library')])
